Fixes for lost-server deletion

--- a/conf/cluster.conf
+++ b/conf/cluster.conf
@@ -19,7 +19,7 @@
 
 
 ## Examples:
-#ClusterServerPool {
+ClusterServerPool {
 #    MasterReadPriority 60
 #    StaticSlaveReadPriority 50
 #    DynamicSlaveReadPriority 50
@@ -28,9 +28,10 @@
 #    ServerFailureLimit 10
 #    ServerRetryTimeout 1
 #    KeepAlive 120
-#    Servers {
-#        + 192.168.2.107:2211
-#        + 192.168.2.107:2212
-#    }
-#}
+    Servers {
+        + 127.0.0.1:16379
+        + 127.0.0.1:46379
+        + 127.0.0.1:15379
+    }
+}
 
